# chorus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  start.ps1
.github/workflows/: ci.yml
chorus/: browser.py  main.py  onboarding.py  selectors.json  websocket_manager.py
chorus/frontend/: index.html
docs/superpowers/plans/: 2026-03-19-chorus-mvp-launch.md
docs/superpowers/specs/: 2026-03-19-chorus-mvp-launch-design.md
frontend/: index.html
tests/: test_api_endpoints.py  test_base_platform.py  test_browser.py  test_consensus.py  test_onboarding.py  test_packaging.py  test_retry.py
