[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chorus-ai"
version = "1.0.0"
description = "Query multiple AI platforms simultaneously"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "llm", "chatgpt", "claude", "gemini", "multi-ai", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "playwright>=1.40",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=11.0",
]

[project.urls]
Homepage = "https://github.com/Kabi10/chorus"
Source = "https://github.com/Kabi10/chorus"
"Bug Tracker" = "https://github.com/Kabi10/chorus/issues"

[project.scripts]
chorus = "chorus.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chorus*"]

[tool.setuptools.package-data]
chorus = ["*.json", "frontend/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
